--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "blog-server",
+  "name": "blog",
   "version": "0.0.1",
   "dependencies": {
-    "hprose": "*",
-    "co": "*",
     "co-mongo": "*",
-    "koa": "1.2.4",
-    "koa-router": "5.4.0",
-    "koa-static-cache": "3.1.7",
+    "koa": "*",
+    "koa-router": "*",
+    "koa-static-cache": "*",
     "koa-bodyparser": "*",
     "koa-xml-body": "*",
     "uuid": "*",
     "http2": "*",
-    "jade": "*"
+    "jade": "*",
+    "log4js": "*",
+    "runkoa": "*",
+    "koa-cors": "*",
+    "koa-convert": "*"
+  },
+  "scripts": {
+    "start": "NODE_ENV=development ./node_modules/.bin/nodemon bin/run",
+    "koa": "./node_modules/.bin/runkoa bin/www",
+    "pm2": "pm2 start bin/run ",
+    "test": "NODE_ENV=test echo \"Error: no test specified\" && exit 1",
+    "start_koa": "bin/run"
   }
 }
