--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "log4js": "*",
     "runkoa": "*",
     "koa-cors": "*",
-    "koa-convert": "*"
+    "koa-convert": "*",
+    "formidable": "*"
   },
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/nodemon bin/run",
